MM-9817 - Fixing LHS header popover z-index

--- a/sass/layout/_sidebar-right.scss
+++ b/sass/layout/_sidebar-right.scss
@@ -19,7 +19,7 @@
     }
 
     &.sidebar--right--expanded {
-        z-index: 10;
+        z-index: 11;
     }
 
     .sidebar--right__bg {
